--- a/Components/App.razor
+++ b/Components/App.razor
@@ -48,7 +48,7 @@
             },
         }
     </script>
-    
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="NationsCities.styles.css" />
     <HeadOutlet />
